Revise assignment details and update submission instructions for clarity

--- a/_assignments/00.md
+++ b/_assignments/00.md
@@ -3,13 +3,13 @@ type: assignment
 date: 2026-03-04T00:00:00+08:00
 title: 'Assignment #0'
 pdf: /static_files/assignments/assignment_0.pdf
-attachment: /static_files/assignments/submission_template.zip
 due_event: 
     type: due
     date: 2026-03-08T23:59:00+08:00
     description: 'Assignment #0 due'
 ---
 
-This is a sample assignment.
+Although this assignment is optional, we highly encourage you to complete it to receive early feedback. It is an excellent opportunity to ensure you are on the right track and fully prepared for the upcoming graded milestones.
 
-While this assignment is optional, we highly recommend completing it to receive early feedback. This is an excellent opportunity to ensure you are on the right track and fully prepared for the upcoming graded milestones.
+- Template: [Download](/static_files/assignments/submission_template.zip)
+- Submission: [Web Learning](https://learn.tsinghua.edu.cn/)
