--- a/_assignments/00.md
+++ b/_assignments/00.md
@@ -11,5 +11,5 @@ due_event:
 
 Although this assignment is optional, we highly encourage you to complete it to receive early feedback. It is an excellent opportunity to ensure you are on the right track and fully prepared for the upcoming graded milestones.
 
-- Template: [Download](/static_files/assignments/submission_template.zip)
+- Template: [Download](../static_files/assignments/submission_template.zip)
 - Submission: [Web Learning](https://learn.tsinghua.edu.cn/)
