Add submission instructions for Assignment #0

--- a/_assignments/00.md
+++ b/_assignments/00.md
@@ -9,6 +9,9 @@ due_event:
     description: 'Assignment #0 due'
 ---
 
+Please submit your solutions as a single `.zip` file containing the LaTeX source `main.tex` and
+its compiled PDF `main.pdf`.
+
 - Template: [Download](../static_files/assignments/submission_template.zip)
 - Submission: [Web Learning](https://learn.tsinghua.edu.cn/)
 
